<resources>
    <string name="app_name">RideShareMobileClient</string>
    <string name="map_token">pk.eyJ1IjoiaHVuZ3RkMTExMCIsImEiOiJjanN5OHowYWUwYTdkM3lwaXJ1YmpxeW5uIn0.2mqe0DSMBkv_gzpJUJsqfA</string>

    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login_email">Đăng nhập</string>
    <string name="confirm">Nhập lại mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="or">hoặc</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="no_account">Bạn chưa có tài khoản?</string>
    <string name="login_phone">Đăng nhập bằng điện thoại</string>
    <string name="tag_new_feed">new feed</string>
    <string name="tag_message">message</string>
    <string name="tag_notification">notification</string>
    <string name="tag_setting">setting</string>
    <string name="my_trip">Chuyến đi của tôi</string>
    <string name="register_trip">Chuyến đi đăng ký</string>
    <string name="title_driver">Lái xe</string>
    <string name="title_hitchhiker">Đi kèm</string>
    <string name="key_user">key user</string>
    <string name="username">Tên người dùng</string>
    <string name="no_email">Bạn chưa nhập email</string>
    <string name="no_username">Bạn chưa nhập tên người dùng</string>
    <string name="no_password">Bạn chưa nhập mật khẩu</string>
    <string name="no_confirm">Bạn chưa nhập xác nhận lại mật khẩu</string>
    <string name="errors_confirm">Bạn nhập lại mật khẩu chưa chính xác</string>
    <string name="title_information">Thông tin chuyến đi</string>
    <string name="title_image">Ảnh minh họa</string>
    <string name="list_trip">Danh sách chuyến đi</string>
    <string name="search_trip">Tìm kiếm chuyến đi</string>
    <string name="title_filter">Bộ lọc</string>
    <string name="title_time">Thời gian</string>
    <string name="from">Bắt đầu</string>
    <string name="to">Kết thúc</string>
    <string name="title_price">Giá</string>
    <string name="minimum">Tối thiểu</string>
    <string name="maximum">Tối đa</string>
    <string name="title_other">Khác</string>
    <string name="title_type">Hình thức</string>
    <string name="show_near">Gần khu vực của tôi</string>
    <string name="see_more">Xem thêm</string>
    <string name="no_data">Không có kết quả trả về</string>
    <string name="any_where">Bất cứ đâu</string>
    <string name="select_start_position">Chọn điểm đi</string>
    <string name="select_end_position">Chọn điểm đến</string>
    <string name="title_add_trip">Thêm chuyến đi</string>
    <string name="select_time">Chọn giờ xuất phát</string>
    <string name="number_seat">Số chỗ</string>
    <string name="zero">0</string>
    <string name="note">Ghi chú</string>
    <string name="no_content_note">Chưa có ghi chú</string>
    <string name="unit">VNĐ</string>
    <string name="add">Thêm</string>
    <string name="tag_trip_submit">trip submit</string>
    <string name="type_content">Nhập nội dung</string>
    <string name="tag_trip_register">trip register</string>
    <string name="position">Địa điểm</string>
    <string name="start_position">Địa điểm đi</string>
    <string name="end_position">Địa điểm đến</string>
    <string name="time">Lịch trình</string>
    <string name="select_date">Chọn ngày xuất phát</string>
    <string name="date">Ngày xuất phát</string>
    <string name="time2">Giờ xuất phát</string>
    <string name="vehicle">Phương tiện</string>
    <string name="vehicle0">Xe nhỏ</string>
    <string name="vehicle1">Xe vừa</string>
    <string name="vehicle2">Xe to</string>
    <string name="other">Thông tin khác</string>
    <string name="seat">Số chỗ</string>
    <string name="price">Giá</string>
    <string name="unit_seat">Chỗ</string>
    <string name="unit_price">VNĐ</string>
    <string name="type">Hình thức</string>
    <string name="type0">Lái xe</string>
    <string name="type1">Đi kèm</string>
    <string name="message">Nhắn tin</string>
    <string name="map">Bản đồ</string>
    <string name="title_detail_trip">Thông tin chuyến đi</string>
    <string name="title_detail_infor">Xem thông tin cá nhân</string>
    <string name="new_feed">Trang tin</string>
    <string name="trip_submit">Chuyến đi của tôi</string>
    <string name="trip_register">Chuyến đi đăng ký</string>
    <string name="message2">Tin nhắn</string>
    <string name="notification">Thông báo</string>
    <string name="introduce">Giới thiệu</string>
    <string name="logout">Đăng xuất</string>
    <string name="save">Lưu</string>
    <string name="title_user_register">Danh sách đăng ký</string>
    <string name="accept">Chấp nhận</string>
    <string name="cancel">Xóa</string>
    <string name="detail">Chi tiết</string>
    <string name="vehicle_none">Không yêu cầu</string>
    <string name="rate">Đánh giá</string>
    <string name="profile">Thông tin cá nhân</string>
    <string name="chane_profile">Đổi thông tin</string>
    <string name="chane_password">Đổi mật khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="search">Tìm kiếm</string>
    <string name="route_step">Địa điểm đi qua</string>
    <string name="no_step">Không có</string>
    <string name="list_route_step">Danh sách địa điểm đi qua</string>
    <string name="pick_position">Địa điểm đón</string>
    <string name="select_pick_position">Chọn điểm đón</string>
    <string name="cancel2">Hủy</string>
    <string name="see_rate">Xem đánh giá</string>
    <string name="optization">Tối ưu lộ trình</string>
    <string name="finish">Xong</string>
    <string name="select_fuction">Chọn chức năng</string>
    <string name="list_peopel">Danh sách người đi cùng</string>
    <string name="cancel3">Hủy chuyến đi</string>
    <string name="apply">Áp dụng</string>
    <string name="title_notification">Thông báo</string>
    <string name="title_rate_trip">Đánh giá chuyến đi</string>
    <string name="select_position">Chọn điểm</string>
    <string name="title_detail_rate">Chi tiết đánh giá</string>
</resources>
