<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:text="@string/select_fuction"
        android:textSize="@dimen/font_large" />

    <TextView
        android:id="@+id/tvListPeopel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/padding_normal"
        android:text="@string/list_peopel"
        android:textColor="@color/colorBlackLight"
        android:textSize="@dimen/font_large_huge" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="@dimen/padding_normal"
        android:text="@string/cancel3"
        android:textColor="@color/colorBlackLight"
        android:textSize="@dimen/font_large_huge" />

</LinearLayout>