<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.example.admin.ridesharemobileclient.ui.login.LoginActivity"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height_normal"
        android:background="@drawable/ic_background_header">

        <ImageView
            android:layout_width="@dimen/width_huge"
            android:layout_height="@dimen/height_huge"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_giant"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llBottom"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_huge_giant"
            android:layout_marginRight="@dimen/margin_huge_giant"
            android:layout_marginTop="@dimen/margin_large_huge"
            android:background="@drawable/background_border_login">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivEmail"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_large"
                android:paddingStart="@dimen/padding_small"
                android:paddingTop="@dimen/padding_normal"
                android:textSize="@dimen/font_normal" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="@dimen/width_normal"
                android:layout_height="@dimen/height_normal"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_normal_large"
                android:scaleType="fitXY"
                android:src="@drawable/ic_email"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_huge_giant"
            android:layout_marginRight="@dimen/margin_huge_giant"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/background_border_login">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/ivPassword"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingBottom="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_large"
                android:paddingStart="@dimen/padding_small"
                android:paddingTop="@dimen/padding_normal"
                android:textSize="@dimen/font_normal" />

            <ImageView
                android:id="@+id/ivPassword"
                android:layout_width="@dimen/width_normal"
                android:layout_height="@dimen/height_normal"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/margin_normal_large"
                android:scaleType="fitXY"
                android:src="@drawable/ic_password"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_huge_giant"
            android:layout_marginRight="@dimen/margin_huge_giant"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/background_border_login_email"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/login_email"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/forgot_password"
            android:textSize="@dimen/font_normal" />

        <TextView
            android:id="@+id/tvOr"
            android:layout_marginTop="@dimen/margin_huge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="@dimen/font_normal" />

        <LinearLayout
            android:id="@+id/llLoginPhone"
            android:gravity="center"
            android:background="@drawable/background_border_login_phone"
            android:layout_marginLeft="@dimen/margin_huge_giant"
            android:layout_marginRight="@dimen/margin_huge_giant"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_vertical"
                android:drawableStart="@drawable/ic_login_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_medium"
                android:paddingBottom="@dimen/padding_medium"
                android:textAllCaps="true"
                android:text="@string/login_phone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_normal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="@dimen/font_normal"
                android:textColor="@color/colorBlack"
                android:text="@string/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_marginStart="@dimen/margin_small"
                android:textSize="@dimen/font_large"
                android:textColor="@color/colorGreen"
                android:textStyle="bold"
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>